--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -4,11 +4,24 @@
     <a class="navbar-brand">Original Store</a>
     <div class="collapse navbar-collapse justify-content-end">
       <ul class="navbar-nav">
-        <li class="nav-item">
-          <a class="btn btn-outline-primary mr-2" href="/login" (click)="loginClick()">Login</a>
+        <li class="nav-item" *ngIf="!authService.isLoggedIn()">
+          <a class="btn btn-outline-primary mr-2" (click)="loginClick()">Login</a>
         </li>
-        <li class="nav-item">
-          <a class="btn btn-outline-success" href="/register" (click)="registerClick()">Register</a>
+        <li class="nav-item" *ngIf="!authService.isLoggedIn()">
+          <a class="btn btn-outline-success" (click)="registerClick()">Register</a>
+        </li>
+
+        <li class="nav-item" *ngIf="authService.isLoggedIn()">
+          <div class="dropdown">
+            <a class="btn btn-outline-primary mr-2 dropdown-toggle" data-bs-toggle="dropdown" aria-expanded="false">
+              <i class="bi bi-person-circle"></i>
+              <ul class="dropdown-menu">
+                <li><a class="dropdown-item" (click)="userClick()">User</a></li>
+                <li><a class="dropdown-item">Order</a></li>
+                <li><a class="dropdown-item" (click)="authService.logout()">Logout</a></li>
+              </ul>
+            </a>
+          </div>
         </li>
       </ul>
     </div>
@@ -48,42 +61,6 @@
   <div *ngIf="loading">
     Đang tải thêm sản phẩm...
   </div>
-
-    <!-- Product Card 2 -->
-<!--    <div class="col-md-4 mb-4">-->
-<!--      <div class="card">-->
-<!--        <img src="https://via.placeholder.com/300x200" class="card-img-top" alt="Product 2">-->
-<!--        <div class="card-body">-->
-<!--          <h5 class="card-title">Product 2</h5>-->
-<!--          <p class="card-text">$30.00</p>-->
-<!--          <a href="/product/2" class="btn btn-primary">View Details</a>-->
-<!--        </div>-->
-<!--      </div>-->
-<!--    </div>-->
-
-<!--    &lt;!&ndash; Product Card 3 &ndash;&gt;-->
-<!--    <div class="col-md-4 mb-4">-->
-<!--      <div class="card">-->
-<!--        <img src="https://via.placeholder.com/300x200" class="card-img-top" alt="Product 3">-->
-<!--        <div class="card-body">-->
-<!--          <h5 class="card-title">Product 3</h5>-->
-<!--          <p class="card-text">$40.00</p>-->
-<!--          <a href="/product/3" class="btn btn-primary">View Details</a>-->
-<!--        </div>-->
-<!--      </div>-->
-<!--    </div>-->
-
-<!--    <div class="col-md-4 mb-4">-->
-<!--      <div class="card">-->
-<!--        <img src="https://via.placeholder.com/300x200" class="card-img-top" alt="Product 3">-->
-<!--        <div class="card-body">-->
-<!--          <h5 class="card-title">Product 4</h5>-->
-<!--          <p class="card-text">$40.00</p>-->
-<!--          <a href="/product/3" class="btn btn-primary">View Details</a>-->
-<!--        </div>-->
-<!--      </div>-->
-<!--    </div>-->
-<!--  </div>-->
 
   <router-outlet/>
 </div>
