--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -4,14 +4,14 @@
     <a class="navbar-brand">Original Store</a>
     <div class="collapse navbar-collapse justify-content-end">
       <ul class="navbar-nav">
-        <li class="nav-item" *ngIf="!authService.isLoggedIn()">
+        <li class="nav-item" *ngIf="!logined">
           <a class="btn btn-outline-primary mr-2" (click)="loginClick()">Login</a>
         </li>
-        <li class="nav-item" *ngIf="!authService.isLoggedIn()">
+        <li class="nav-item" *ngIf="!logined">
           <a class="btn btn-outline-success" (click)="registerClick()">Register</a>
         </li>
 
-        <li class="nav-item" *ngIf="authService.isLoggedIn()">
+        <li class="nav-item" *ngIf="logined">
           <div class="dropdown">
             <a class="btn btn-outline-primary mr-2 dropdown-toggle" data-bs-toggle="dropdown" aria-expanded="false">
               <i class="bi bi-person-circle"></i>
@@ -43,7 +43,8 @@
     <!-- Product Card 1 -->
     <div class="col-md-4 mb-4"  *ngFor="let product of products">
       <div class="card">
-        <img src="https://pic0.iqiyipic.com/image/20240618/f2/2e/a_100421840_m_601_en_m6_1080_608.jpg" class="card-img-top" alt="Product 1">
+<!--        <img src="https://pic0.iqiyipic.com/image/20240618/f2/2e/a_100421840_m_601_en_m6_1080_608.jpg" class="card-img-top" alt="Product 1">-->
+        <img [src]="'data:image/jpeg;base64,' + product.image?.toString()" alt="Product Image">
         <div class="card-body">
           <h5 class="card-title">{{product.name}}</h5>
           <p class="card-text">{{product.price}}</p>
@@ -61,6 +62,10 @@
   <div *ngIf="loading">
     Đang tải thêm sản phẩm...
   </div>
+
+<!--  <div *ngFor="let image of images">-->
+<!--    <img [src]="'data:image/jpeg;base64,' + image.image" alt="Product Image">-->
+<!--  </div>-->
 
   <router-outlet/>
 </div>
