--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,71 +1,147 @@
 <div class="container mt-5">
-  <!-- Navigation bar -->
-  <nav class="navbar navbar-expand-lg navbar-light bg-light">
-    <a class="navbar-brand">Original Store</a>
-    <div class="collapse navbar-collapse justify-content-end">
-      <ul class="navbar-nav">
-        <li class="nav-item" *ngIf="!logined">
-          <a class="btn btn-outline-primary mr-2" (click)="loginClick()">Login</a>
-        </li>
-        <li class="nav-item" *ngIf="!logined">
-          <a class="btn btn-outline-success" (click)="registerClick()">Register</a>
-        </li>
+  <style>
+    .dropdown:hover .dropdown-menu {
+      display: block;
+    }
 
-        <li class="nav-item" *ngIf="logined">
-          <div class="dropdown">
-            <a class="btn btn-outline-primary mr-2 dropdown-toggle" data-bs-toggle="dropdown" aria-expanded="false">
-              <i class="bi bi-person-circle"></i>
-              <ul class="dropdown-menu">
-                <li><a class="dropdown-item" (click)="userClick()">User</a></li>
-                <li><a class="dropdown-item">Order</a></li>
-                <li><a class="dropdown-item" (click)="authService.logout()">Logout</a></li>
-              </ul>
-            </a>
+  </style>
+  <div class="w-screen">
+    <header class="">
+<!--      <nav class="flex justify-around items-center w-screen bg-[rgb(0,255,255)] shadow-lg p-1">-->
+<!--        <div class="p-1 sm:w-1/5">-->
+<!--          <div class="text-black text-center p-0 font-light flex">-->
+<!--            <svg class="text-black w-6 h-6" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">-->
+<!--              <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M7 8h10M7 12h4m1 8l-4-4H5a2 2 0 01-2-2V6a2 2 0 012-2h14a2 2 0 012 2v8a2 2 0 01-2 2h-3l-4 4z"></path>-->
+<!--            </svg>-->
+<!--            OriginalShop-->
+<!--          </div>-->
+<!--        </div>-->
+<!--        <div *ngIf="!logined">-->
+<!--          <button (click)="loginClick()"-->
+<!--            class="middle none center mr-4 rounded-lg bg-blue-500 py-3 px-6 font-sans text-xs font-bold uppercase text-white shadow-md shadow-blue-500/20 transition-all hover:shadow-lg hover:shadow-blue-500/40 focus:opacity-[0.85] focus:shadow-none active:opacity-[0.85] active:shadow-none disabled:pointer-events-none disabled:opacity-50 disabled:shadow-none"-->
+<!--            data-ripple-light="true">Login-->
+<!--          </button>-->
+<!--          <button (click)="registerClick()"-->
+<!--            class="middle none center mr-4 rounded-lg bg-blue-500 py-3 px-6 font-sans text-xs font-bold uppercase text-white shadow-md shadow-blue-500/20 transition-all hover:shadow-lg hover:shadow-blue-500/40 focus:opacity-[0.85] focus:shadow-none active:opacity-[0.85] active:shadow-none disabled:pointer-events-none disabled:opacity-50 disabled:shadow-none"-->
+<!--            data-ripple-light="true">Register-->
+<!--          </button>-->
+<!--        </div>-->
+<!--        <div *ngIf="logined" class="dropdown cursor-pointer p-1 mr-2 flex items-center">-->
+<!--          <div class="">-->
+<!--            <img class="h-6 w-6 rounded-full" src="https://cdn-icons-png.flaticon.com/512/3237/3237472.png" alt="avatar">-->
+<!--          </div>-->
+<!--          <div class="">-->
+<!--            <span class="text-black text-sm font-light ml-1">Nguyen</span>-->
+<!--          </div>-->
+<!--          <div class="rounded-md shadow-sm flex">-->
+<!--            <button onclick="clicaParaAbrirMenu()" class="flex justify-center items-center block h-3 w-3 overflow-hidden focus:outline-none">-->
+<!--              <div id="Seta" class="animate-ping inline-flex h-full w-full rounded-full text-gray-700 opacity-75">-->
+
+<!--                <svg class="h-3 w-3 text-white" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" fill="currentColor">-->
+<!--                  <path fill-rule="evenodd" d="M5.293 7.293a1 1 0 011.414 0L10 10.586l3.293-3.293a1 1 0 111.414 1.414l-4 4a1 1 0 01-1.414 0l-4-4a1 1 0 010-1.414z" clip-rule="evenodd" />-->
+<!--                </svg>-->
+<!--              </div>-->
+<!--            </button>-->
+<!--            <ul class="dropdown-menu absolute w-48 bg-white rounded-lg shadow-xl mt-5 -ml-48 hidden sm:mr-24 md:mr-32 lg:mr-48 xl:mr-64s">-->
+<!--              <li class=""><a class="rounded-t text-gray-800 hover:bg-gray-600 hover:text-white py-2 px-4 block whitespace-no-wrap" (click)="userClick()">Account</a></li>-->
+<!--              <li class=""><a class="text-gray-800 hover:bg-gray-600 hover:text-white py-2 px-4 block whitespace-no-wrap" >Order</a></li>-->
+<!--              <li class=""><a class="rounded-b text-gray-800 hover:bg-gray-600 hover:text-white py-2 px-4 block whitespace-no-wrap" (click)="authService.logout()">Logout</a></li>-->
+<!--            </ul>-->
+<!--          </div>-->
+<!--        </div>-->
+<!--      </nav>-->
+      <div class="bg-white shadow-sm sticky top-0">
+        <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8 py-1 md:py-4">
+          <div class="flex items-center justify-between md:justify-start">
+            <!-- Menu Trigger -->
+            <button type="button" class="md:hidden w-10 h-10 rounded-lg -ml-2 flex justify-center items-center">
+              <svg class="text-gray-500 w-6 h-6" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+                <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 6h16M4 12h16M4 18h16" />
+              </svg>
+            </button>
+            <!-- ./ Menu Trigger -->
+
+            <a href="" class="font-bold text-gray-700 text-2xl">Original Shop</a>
+
+            <div class="hidden md:flex space-x-3 flex-1 lg:ml-8">
+              <a href="#" class="px-2 py-2 hover:bg-gray-100 rounded-lg text-gray-400 hover:text-gray-600">Electronics</a>
+              <a href="#" class="px-2 py-2 hover:bg-gray-100 rounded-lg text-gray-400 hover:text-gray-600">Fashion</a>
+              <a href="#" class="px-2 py-2 hover:bg-gray-100 rounded-lg text-gray-400 hover:text-gray-600">Tools</a>
+              <a href="#" class="px-2 py-2 hover:bg-gray-100 rounded-lg text-gray-400 hover:text-gray-600">Books</a>
+              <a href="#" class="px-2 py-2 hover:bg-gray-100 rounded-lg text-gray-400 hover:text-gray-600">More</a>
+            </div>
+
+            <div class="flex items-center space-x-4">
+              <div class="relative hidden md:block">
+                <input type="search" class="pl-10 pr-2 h-10 py-1 rounded-lg border border-gray-200 focus:border-gray-300 focus:outline-none focus:shadow-inner leading-none" placeholder="Search">
+                <svg class="h-6 w-6 text-gray-300 ml-2 mt-2 stroke-current absolute top-0 left-0" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+                  <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M21 21l-6-6m2-5a7 7 0 11-14 0 7 7 0 0114 0z" />
+                </svg>
+              </div>
+
+              <a href="#" class="flex h-10 items-center px-2 rounded-lg border border-gray-200 hover:border-gray-300 focus:outline-none hover:shadow-inner">
+                <svg class="h-6 w-6 leading-none text-gray-300 stroke-current" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+                  <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M16 11V7a4 4 0 00-8 0v4M5 9h14l1 12H4L5 9z" />
+                </svg>
+                <span class="pl-1 text-gray-500 text-md">0</span>
+              </a>
+
+              <button type="button" class="hidden md:block w-10 h-10 rounded-lg bg-gray-100 border border-gray-200 flex justify-center items-center">
+                <img src="https://avatars.dicebear.com/api/bottts/2.svg" alt="bottts" width="28" height="28" class="rounded-lg mx-auto">
+              </button>
+            </div>
           </div>
-        </li>
-      </ul>
-    </div>
-  </nav>
 
-  <!-- Search bar -->
-  <div class="row mt-4">
-    <div class="col-md-8 offset-md-2">
-      <form class="form-inline d-flex">
-        <input class="form-control mr-2 w-75" type="search" placeholder="Search for products..." aria-label="Search">
-        <button class="btn btn-outline-primary" type="submit">Search</button>
-      </form>
-    </div>
-  </div>
+          <!-- Search Mobile -->
+          <div class="relative md:hidden">
+            <input type="search" class="mt-1 w-full pl-10 pr-2 h-10 py-1 rounded-lg border border-gray-200 focus:border-gray-300 focus:outline-none focus:shadow-inner leading-none" placeholder="Search">
 
-
-  <!-- Product section -->
-  <div class="row mt-5">
-    <!-- Product Card 1 -->
-    <div class="col-md-4 mb-4"  *ngFor="let product of products">
-      <div class="card">
-<!--        <img src="https://pic0.iqiyipic.com/image/20240618/f2/2e/a_100421840_m_601_en_m6_1080_608.jpg" class="card-img-top" alt="Product 1">-->
-        <img [src]="'data:image/jpeg;base64,' + product.image?.toString()" alt="Product Image">
-        <div class="card-body">
-          <h5 class="card-title">{{product.name}}</h5>
-          <p class="card-text">{{product.price}}</p>
-          <p>{{product.description}}</p>
-<!--          <a href="/product/1" class="btn btn-primary">{{}}</a>-->
+            <svg class="h-6 w-6 text-gray-300 ml-2 mt-3 stroke-current absolute top-0 left-0" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+              <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M21 21l-6-6m2-5a7 7 0 11-14 0 7 7 0 0114 0z" />
+            </svg>
+          </div>
+          <!-- ./ Search Mobile -->
         </div>
       </div>
+
+      <div style="max-width:700px; margin: 50px auto;">
+
+        <form class="flex items-center" (ngSubmit)="searchProduct()">
+          <label for="voice-search" class="sr-only">Search</label>
+          <div class="relative w-full">
+            <div class="flex absolute inset-y-0 left-0 items-center pl-3 pointer-events-none">
+              <svg aria-hidden="true" class="w-5 h-5 text-gray-500 dark:text-gray-400" fill="currentColor" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg"><path fill-rule="evenodd" d="M8 4a4 4 0 100 8 4 4 0 000-8zM2 8a6 6 0 1110.89 3.476l4.817 4.817a1 1 0 01-1.414 1.414l-4.816-4.816A6 6 0 012 8z" clip-rule="evenodd"></path></svg>
+            </div>
+            <input type="text" id="voice-search" class="bg-gray-50 border border-gray-300 text-gray-900 text-sm focus:ring-blue-500 focus:border-blue-500 block w-full pl-10 p-2.5  dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500" placeholder="Search Mockups, Logos, Design Templates..." required="">
+            <button type="button" class="flex absolute inset-y-0 right-0 items-center pr-3">
+              <svg aria-hidden="true" class="w-4 h-4 text-gray-500 dark:text-gray-400 hover:text-gray-900 dark:hover:text-white" fill="currentColor" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg"><path fill-rule="evenodd" d="M7 4a3 3 0 016 0v4a3 3 0 11-6 0V4zm4 10.93A7.001 7.001 0 0017 8a1 1 0 10-2 0A5 5 0 015 8a1 1 0 00-2 0 7.001 7.001 0 006 6.93V17H6a1 1 0 100 2h8a1 1 0 100-2h-3v-2.07z" clip-rule="evenodd"></path></svg>
+            </button>
+          </div>
+          <button type="submit" class="inline-flex items-center py-2.5 px-3 ml-2 text-sm font-medium text-white bg-blue-700 border border-blue-700 hover:bg-blue-800 focus:ring-4 focus:outline-none focus:ring-blue-300 dark:bg-blue-600 dark:hover:bg-blue-700 dark:focus:ring-blue-800">
+            <svg aria-hidden="true" class="mr-2 -ml-1 w-5 h-5" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M21 21l-6-6m2-5a7 7 0 11-14 0 7 7 0 0114 0z"></path></svg>Search
+          </button>
+        </form>
+      </div>
+    </header>
+    <div>
+      <section class="min-h-screen body-font text-gray-600 ">
+        <div class="container mx-auto px-5 py-10">
+          <div class="-m-4 flex flex-wrap">
+            <div class="w-full p-4 md:w-1/2 lg:w-1/4" *ngFor="let product of products">
+              <a class="relative block h-48 overflow-hidden rounded">
+                <img alt="ecommerce" class="block h-full w-full object-cover object-center cursor-pointer" *ngIf="product?.image" [src]="'data:image/jpeg;base64,' + product.image.toString()"/>
+              </a>
+              <div class="mt-4">
+                <h2 class="title-font mb-1 text-lg text-gray-900">{{product.name}}</h2>
+                <h3 class="title-font text-lg text-orange-600 font-medium">{{product.price}}</h3>
+                <p class="mt-1">01/09/2022</p>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
     </div>
   </div>
-
-  <!-- Trigger để load thêm sản phẩm khi cuộn -->
-  <div #loadMoreTrigger style="height: 1px;"></div>
-
-  <!-- Hiển thị thông báo đang load nếu cần -->
-  <div *ngIf="loading">
-    Đang tải thêm sản phẩm...
-  </div>
-
-<!--  <div *ngFor="let image of images">-->
-<!--    <img [src]="'data:image/jpeg;base64,' + image.image" alt="Product Image">-->
-<!--  </div>-->
 
   <router-outlet/>
 </div>
