--- a/src/app/pages/login/login.component.html
+++ b/src/app/pages/login/login.component.html
@@ -1,31 +1,43 @@
 <div class="container">
-  <div class="row justify-content-center mt-5">
-    <div class="col-md-6 col-lg-4">
-      <div class="card p-4">
-        <h3 class="card-title text-center mb-4">Đăng Nhập</h3>
-        <form (ngSubmit)="onSubmit()" #loginForm="ngForm">
-          <div class="form-group">
-            <label for="username" class="mt-3">Tên đăng nhập:</label>
-            <input type="text" id="username" class="form-control mt-3" [(ngModel)]="authRequest.username" name="username" required placeholder="Nhập tên đăng nhập"/>
-            <div *ngIf="errorUsername" class="text-danger">{{ errorUsername }}</div>
-          </div>
-
-          <div class="form-group">
-            <label for="password" class="mt-3">Mật khẩu:</label>
-            <input [(ngModel)]="authRequest.password" class="form-control mt-3" id="password" name="password" placeholder="Nhập mật khẩu"
-                   required type="password"/>
-            <div *ngIf="errorPassword" class="text-danger">{{ errorPassword }}</div>
-          </div>
-
-          <div *ngIf="errorMessage" class="alert alert-danger">{{ errorMessage }}</div>
-          <div class="mt-3">
-            <button type="submit" class="btn btn-primary btn-block">Đăng nhập</button>
-            <button (click)="registerClick()" type="button" class="btn btn-primary btn-block float-end">Đăng ký</button>
-          </div>
-        </form>
+  <div class="bg-gray-100 flex justify-center items-center h-screen">
+    <!-- Left: Image -->
+    <div class="w-1/2 h-screen hidden lg:block">
+      <img src="https://cdn2.fptshop.com.vn/unsafe/1920x0/filters:quality(100)/2024_1_29_638421139546681934_avatar-one-piece-52.jpg" alt="Placeholder Image" class="object-cover w-full h-full">
+    </div>
+    <!-- Right: Login Form -->
+    <div class="lg:p-36 md:p-52 sm:20 p-8 w-full lg:w-1/2">
+      <h1 class="text-2xl font-semibold mb-4">Login</h1>
+      <form (ngSubmit)="onSubmit()" #loginForm="ngForm">
+        <!-- Username Input -->
+        <div class="mb-4">
+          <label for="username" class="block text-gray-600">Username</label>
+          <input type="text" id="username" name="username" [(ngModel)]="authRequest.username" class="w-full border border-gray-300 rounded-md py-2 px-3 focus:outline-none focus:border-blue-500" autocomplete="off">
+        </div>
+        <!-- Password Input -->
+        <div class="mb-4">
+          <label for="password" class="block text-gray-600">Password</label>
+          <input type="password" id="password" name="password" [(ngModel)]="authRequest.password" class="w-full border border-gray-300 rounded-md py-2 px-3 focus:outline-none focus:border-blue-500" autocomplete="off">
+        </div>
+        <!-- Remember Me Checkbox -->
+        <div class="mb-4 flex items-center">
+          <input type="checkbox" id="remember" name="remember" class="text-blue-500">
+          <label for="remember" class="text-gray-600 ml-2">Remember Me</label>
+        </div>
+        <!-- Forgot Password Link -->
+        <div class="mb-6 text-blue-500">
+          <a class="hover:underline">Forgot Password?</a>
+        </div>
+        <!-- Login Button -->
+        <button type="submit" class="bg-blue-500 hover:bg-blue-600 text-white font-semibold rounded-md py-2 px-4 w-full">Login</button>
+      </form>
+      <!-- Sign up  Link -->
+      <div class="mt-6 text-blue-500 text-center">
+        <a class="hover:underline" (click)="registerClick()">Sign up Here</a>
       </div>
     </div>
   </div>
 
   <router-outlet/>
 </div>
+
+
