--- a/src/app/pages/user/my-product/my-product.component.html
+++ b/src/app/pages/user/my-product/my-product.component.html
@@ -1,4 +1,37 @@
-<div class="container">
-  <p>my-product works!</p>
+<div>
+    <!-- Header -->
+    <header>
+      <h1 class="bg-white py-4 text-center">
+        <a href="#" class="text-xl font-bold text-gray-700 cursor-pointer">BUSINESS MODEL CANVAS</a>
+      </h1>
+      <nav class="mt-6">
+        <ul class="flex justify-center  items-center space-x-4">
+          <li><a href="/user" class="text-md font-semibold text-gray-600 hover:text-gray-800">Home</a></li>
+          <li><a href="/user/myProducts/create" class="text-md font-semibold text-gray-600 hover:text-gray-800">Create Product</a></li>
+          <li><a href="" class="text-md font-semibold text-gray-600 hover:text-gray-800">About</a></li>
+        </ul>
+      </nav>
+    </header>
+    <section class="min-h-screen body-font text-gray-600 ">
+      <div class="container mx-auto px-5 py-10">
+        <div class="-m-4 flex flex-wrap" >
+          <div class="w-full p-4 md:w-1/2 lg:w-1/4" *ngFor="let product of products">
+              <a class="relative block h-48 overflow-hidden rounded">
+                <img alt="ecommerce" class="block h-full w-full object-cover object-center cursor-pointer" *ngIf="product?.image" [src]="'data:image/jpeg;base64,' + product.image.toString()"/>
+              </a>
+              <div class="mt-4">
+                <h2 class="title-font mb-1 text-lg text-gray-900">{{product.name}}</h2>
+                <h3 class="title-font text-lg text-orange-600 font-medium">{{product.price}}</h3>
+                <p class="mt-1">01/09/2022</p>
+              </div>
+            </div>
+        </div>
+      </div>
+    </section>
+    <!-- Footer -->
+    <footer>
+      <p class="text-center  py-4 bg-white">Create By &copy; YOTHIN INTHAVYXUP</p>
+    </footer>
+
   <router-outlet/>
 </div>
