--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -3,53 +3,28 @@
     .dropdown:hover .dropdown-menu {
       display: block;
     }
+    /* since nested groupes are not supported we have to use
+       regular css for the nested dropdowns
+    */
+    li>ul                 { transform: translatex(100%) scale(0) }
+    li:hover>ul           { transform: translatex(101%) scale(1) }
+    li > button svg       { transform: rotate(-90deg) }
+    li:hover > button svg { transform: rotate(-270deg) }
 
+    /* Below styles fake what can be achieved with the tailwind config
+       you need to add the group-hover variant to scale and define your custom
+       min width style.
+       See https://codesandbox.io/s/tailwindcss-multilevel-dropdown-y91j7?file=/index.html
+       for implementation with config file
+    */
+    .group:hover .group-hover\:scale-100 { transform: scale(1) }
+    .group:hover .group-hover\:-rotate-180 { transform: rotate(180deg) }
+    .scale-0 { transform: scale(0) }
+    .min-w-32 { min-width: 8rem }
   </style>
+
   <div class="w-screen">
     <header class="">
-<!--      <nav class="flex justify-around items-center w-screen bg-[rgb(0,255,255)] shadow-lg p-1">-->
-<!--        <div class="p-1 sm:w-1/5">-->
-<!--          <div class="text-black text-center p-0 font-light flex">-->
-<!--            <svg class="text-black w-6 h-6" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">-->
-<!--              <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M7 8h10M7 12h4m1 8l-4-4H5a2 2 0 01-2-2V6a2 2 0 012-2h14a2 2 0 012 2v8a2 2 0 01-2 2h-3l-4 4z"></path>-->
-<!--            </svg>-->
-<!--            OriginalShop-->
-<!--          </div>-->
-<!--        </div>-->
-<!--        <div *ngIf="!logined">-->
-<!--          <button (click)="loginClick()"-->
-<!--            class="middle none center mr-4 rounded-lg bg-blue-500 py-3 px-6 font-sans text-xs font-bold uppercase text-white shadow-md shadow-blue-500/20 transition-all hover:shadow-lg hover:shadow-blue-500/40 focus:opacity-[0.85] focus:shadow-none active:opacity-[0.85] active:shadow-none disabled:pointer-events-none disabled:opacity-50 disabled:shadow-none"-->
-<!--            data-ripple-light="true">Login-->
-<!--          </button>-->
-<!--          <button (click)="registerClick()"-->
-<!--            class="middle none center mr-4 rounded-lg bg-blue-500 py-3 px-6 font-sans text-xs font-bold uppercase text-white shadow-md shadow-blue-500/20 transition-all hover:shadow-lg hover:shadow-blue-500/40 focus:opacity-[0.85] focus:shadow-none active:opacity-[0.85] active:shadow-none disabled:pointer-events-none disabled:opacity-50 disabled:shadow-none"-->
-<!--            data-ripple-light="true">Register-->
-<!--          </button>-->
-<!--        </div>-->
-<!--        <div *ngIf="logined" class="dropdown cursor-pointer p-1 mr-2 flex items-center">-->
-<!--          <div class="">-->
-<!--            <img class="h-6 w-6 rounded-full" src="https://cdn-icons-png.flaticon.com/512/3237/3237472.png" alt="avatar">-->
-<!--          </div>-->
-<!--          <div class="">-->
-<!--            <span class="text-black text-sm font-light ml-1">Nguyen</span>-->
-<!--          </div>-->
-<!--          <div class="rounded-md shadow-sm flex">-->
-<!--            <button onclick="clicaParaAbrirMenu()" class="flex justify-center items-center block h-3 w-3 overflow-hidden focus:outline-none">-->
-<!--              <div id="Seta" class="animate-ping inline-flex h-full w-full rounded-full text-gray-700 opacity-75">-->
-
-<!--                <svg class="h-3 w-3 text-white" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" fill="currentColor">-->
-<!--                  <path fill-rule="evenodd" d="M5.293 7.293a1 1 0 011.414 0L10 10.586l3.293-3.293a1 1 0 111.414 1.414l-4 4a1 1 0 01-1.414 0l-4-4a1 1 0 010-1.414z" clip-rule="evenodd" />-->
-<!--                </svg>-->
-<!--              </div>-->
-<!--            </button>-->
-<!--            <ul class="dropdown-menu absolute w-48 bg-white rounded-lg shadow-xl mt-5 -ml-48 hidden sm:mr-24 md:mr-32 lg:mr-48 xl:mr-64s">-->
-<!--              <li class=""><a class="rounded-t text-gray-800 hover:bg-gray-600 hover:text-white py-2 px-4 block whitespace-no-wrap" (click)="userClick()">Account</a></li>-->
-<!--              <li class=""><a class="text-gray-800 hover:bg-gray-600 hover:text-white py-2 px-4 block whitespace-no-wrap" >Order</a></li>-->
-<!--              <li class=""><a class="rounded-b text-gray-800 hover:bg-gray-600 hover:text-white py-2 px-4 block whitespace-no-wrap" (click)="authService.logout()">Logout</a></li>-->
-<!--            </ul>-->
-<!--          </div>-->
-<!--        </div>-->
-<!--      </nav>-->
       <div class="bg-white shadow-sm sticky top-0">
         <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8 py-1 md:py-4">
           <div class="flex items-center justify-between md:justify-start">
@@ -64,31 +39,44 @@
             <a href="" class="font-bold text-gray-700 text-2xl">Original Shop</a>
 
             <div class="hidden md:flex space-x-3 flex-1 lg:ml-8">
-              <a href="#" class="px-2 py-2 hover:bg-gray-100 rounded-lg text-gray-400 hover:text-gray-600">Electronics</a>
-              <a href="#" class="px-2 py-2 hover:bg-gray-100 rounded-lg text-gray-400 hover:text-gray-600">Fashion</a>
-              <a href="#" class="px-2 py-2 hover:bg-gray-100 rounded-lg text-gray-400 hover:text-gray-600">Tools</a>
-              <a href="#" class="px-2 py-2 hover:bg-gray-100 rounded-lg text-gray-400 hover:text-gray-600">Books</a>
-              <a href="#" class="px-2 py-2 hover:bg-gray-100 rounded-lg text-gray-400 hover:text-gray-600">More</a>
+<!--              <a href="#" class="px-2 py-2 hover:bg-gray-100 rounded-lg text-gray-400 hover:text-gray-600">Electronics</a>-->
+<!--              <a href="#" class="px-2 py-2 hover:bg-gray-100 rounded-lg text-gray-400 hover:text-gray-600">Fashion</a>-->
+<!--              <a href="#" class="px-2 py-2 hover:bg-gray-100 rounded-lg text-gray-400 hover:text-gray-600">Tools</a>-->
+<!--              <a href="#" class="px-2 py-2 hover:bg-gray-100 rounded-lg text-gray-400 hover:text-gray-600">Books</a>-->
+<!--              <a href="#" class="px-2 py-2 hover:bg-gray-100 rounded-lg text-gray-400 hover:text-gray-600">More</a>-->
             </div>
 
-            <div class="flex items-center space-x-4">
-              <div class="relative hidden md:block">
-                <input type="search" class="pl-10 pr-2 h-10 py-1 rounded-lg border border-gray-200 focus:border-gray-300 focus:outline-none focus:shadow-inner leading-none" placeholder="Search">
-                <svg class="h-6 w-6 text-gray-300 ml-2 mt-2 stroke-current absolute top-0 left-0" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor">
-                  <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M21 21l-6-6m2-5a7 7 0 11-14 0 7 7 0 0114 0z" />
-                </svg>
-              </div>
+            <div *ngIf="!logined" class="flex items-center space-x-4">
+              <button (click)="registerClick()"
+                class="middle none center mr-3 rounded-lg bg-pink-500 py-3 px-6 font-sans text-xs font-bold uppercase text-white shadow-md shadow-pink-500/20 transition-all hover:shadow-lg hover:shadow-pink-500/40 focus:opacity-[0.85] focus:shadow-none active:opacity-[0.85] active:shadow-none disabled:pointer-events-none disabled:opacity-50 disabled:shadow-none"
+                data-ripple-light="true">
+                Register
+              </button>
+              <button (click)="loginClick()"
+                class="middle none center mr-3 rounded-lg bg-pink-500 py-3 px-6 font-sans text-xs font-bold uppercase text-white shadow-md shadow-pink-500/20 transition-all hover:shadow-lg hover:shadow-pink-500/40 focus:opacity-[0.85] focus:shadow-none active:opacity-[0.85] active:shadow-none disabled:pointer-events-none disabled:opacity-50 disabled:shadow-none"
+                data-ripple-light="true">
+                Login
+              </button>
+            </div>
 
-              <a href="#" class="flex h-10 items-center px-2 rounded-lg border border-gray-200 hover:border-gray-300 focus:outline-none hover:shadow-inner">
+            <div *ngIf="logined" class="flex items-center space-x-4">
+              <a href="/cart" class="flex h-10 items-center px-2 rounded-lg border border-gray-200 hover:border-gray-300 focus:outline-none hover:shadow-inner">
                 <svg class="h-6 w-6 leading-none text-gray-300 stroke-current" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor">
                   <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M16 11V7a4 4 0 00-8 0v4M5 9h14l1 12H4L5 9z" />
                 </svg>
                 <span class="pl-1 text-gray-500 text-md">0</span>
               </a>
 
-              <button type="button" class="hidden md:block w-10 h-10 rounded-lg bg-gray-100 border border-gray-200 flex justify-center items-center">
-                <img src="https://avatars.dicebear.com/api/bottts/2.svg" alt="bottts" width="28" height="28" class="rounded-lg mx-auto">
-              </button>
+              <div class="group inline-block">
+                <button class="outline-none focus:outline-none border px-3 py-1 bg-white rounded-sm flex items-center min-w-32">
+                  <img src="https://avatars.dicebear.com/api/bottts/2.svg" alt="bottts" width="28" height="28" class="rounded-lg mx-auto">
+                </button>
+                <ul class="bg-white border rounded-sm transform scale-0 group-hover:scale-100 absolute transition duration-150 ease-in-out origin-top min-w-32">
+                  <li class="rounded-sm px-3 py-1 hover:bg-gray-100" (click)="userClick()">User</li>
+                  <li class="rounded-sm px-3 py-1 hover:bg-gray-100" (click)="orderClick()">Order</li>
+                  <li class="rounded-sm px-3 py-1 hover:bg-gray-100" (click)="logoutClick()">Logout</li>
+                </ul>
+              </div>
             </div>
           </div>
 
@@ -127,9 +115,9 @@
       <section class="min-h-screen body-font text-gray-600 ">
         <div class="container mx-auto px-5 py-10">
           <div class="-m-4 flex flex-wrap">
-            <div class="w-full p-4 md:w-1/2 lg:w-1/4" *ngFor="let product of products">
+            <div class="w-full p-4 md:w-1/2 lg:w-1/4" (click)="productClick(product.id)" *ngFor="let product of products">
               <a class="relative block h-48 overflow-hidden rounded">
-                <img alt="ecommerce" class="block h-full w-full object-cover object-center cursor-pointer" *ngIf="product?.image" [src]="'data:image/jpeg;base64,' + product.image.toString()"/>
+                <img alt="ecommerce" class="block h-full w-full object-cover object-center cursor-pointer" *ngIf="product.mainImage?.image" [src]="'data:image/jpeg;base64,' + product.mainImage.image.toString()"/>
               </a>
               <div class="mt-4">
                 <h2 class="title-font mb-1 text-lg text-gray-900">{{product.name}}</h2>
@@ -142,6 +130,8 @@
       </section>
     </div>
   </div>
+
+  <!-- component -->
 
   <router-outlet/>
 </div>
