--- a/src/app/pages/admin/admin.component.html
+++ b/src/app/pages/admin/admin.component.html
@@ -1,7 +1,7 @@
 <div>
-  <div>
+  <div class="w-full flex justify-end">
     <button (click)="logoutClick()"
-            class="middle none center mr-4 rounded-lg bg-red-500 py-3 px-6 font-sans text-xs font-bold uppercase text-white shadow-md shadow-red-500/20 transition-all hover:shadow-lg hover:shadow-red-500/40 focus:opacity-[0.85] focus:shadow-none active:opacity-[0.85] active:shadow-none disabled:pointer-events-none disabled:opacity-50 disabled:shadow-none"
+            class="middle none center mr-4 rounded-lg bg-red-500 py-3 px-6 font-sans text-xs font-bold uppercase text-white shadow-md shadow-red-500/20 transition-all hover:shadow-lg hover:shadow-red-500/40 focus:opacity-[0.85] focus:shadow-none active:opacity-[0.85] active:shadow-none disabled:pointer-events-none disabled:opacity-50 disabled:shadow-none btn"
             data-ripple-light="true">Logout</button>
   </div>
 
@@ -36,20 +36,24 @@
                 <td class="text-sm text-gray-900 font-light px-6 py-4 whitespace-nowrap">{{user.createAt}}</td>
                 <td class="text-sm text-gray-900 font-light px-6 py-4 whitespace-nowrap">{{user.updateAt}}</td>
                 <td class="text-sm text-gray-900 font-light px-6 py-4 whitespace-nowrap">
-                  <div class="d-flex justify-content-between align-items-center">
-                    <button type="button" class="btn btn-link text-end">
+                  <div class="flex justify-between items-center">
+                    <!-- Nút đầu tiên nằm bên trái -->
+                    <button type="button" (click)="userDetailClick(user.id)" class="btn btn-link text-start">
                       <i class="bi bi-info-circle-fill"></i>
                     </button>
 
-                    <button type="button" (click)="updateClick(user.id)" class="btn btn-link text-end">
+                    <!-- Nút thứ hai nằm ở giữa -->
+                    <button type="button" (click)="updateClick(user.id)" class="btn btn-link mx-auto">
                       <i class="bi bi-pencil-square"></i>
                     </button>
 
+                    <!-- Nút thứ ba nằm bên phải -->
                     <button type="button" (click)="deleteUser(user.id)" class="btn btn-link text-end">
                       <i class="bi bi-trash"></i>
                     </button>
                   </div>
                 </td>
+
               </tr>
             </tbody>
           </table>
