--- a/src/app/pages/home/cart/cart.component.html
+++ b/src/app/pages/home/cart/cart.component.html
@@ -52,6 +52,7 @@
     <table class="w-full text-left table-auto min-w-max">
       <thead>
       <tr class="border-b border-slate-300 bg-slate-50">
+        <th class="p-4 text-sm font-normal leading-none text-slate-500">Select</th>
         <th class="p-4 text-sm font-normal leading-none text-slate-500">Product</th>
         <th class="p-4 text-sm font-normal leading-none text-slate-500">Name</th>
         <th class="p-4 text-sm font-normal leading-none text-slate-500">Quantity</th>
@@ -63,13 +64,30 @@
       <tbody>
       <tr class="hover:bg-slate-50" *ngFor="let cartItem of cartItems">
         <td class="p-4 border-b border-slate-200 py-5">
-          <img *ngIf="cartItem.product.mainImage?.image" [src]="'data:image/jpeg;base64,' + cartItem.product.mainImage.image.toString()" alt="Product 1" class="w-16 h-16 object-cover rounded" />
+          <input type="checkbox" class="form-checkbox h-5 w-5 text-blue-600" (change)="onSelectItem(cartItem.id, $event)">
+        </td>
+        <td class="p-4 border-b border-slate-200 py-5">
+          <a href="{{cartItem.product.id}}">
+            <img *ngIf="cartItem.product.mainImage?.image" [src]="'data:image/jpeg;base64,' + cartItem.product.mainImage.image.toString()" alt="Product 1" class="w-16 h-16 object-cover rounded" />
+          </a>
         </td>
         <td class="p-4 border-b border-slate-200 py-5">
           <p class="block font-semibold text-sm text-slate-800">{{cartItem.product.name}}</p>
         </td>
         <td class="p-4 border-b border-slate-200 py-5">
-          <p class="text-sm text-slate-500">{{cartItem.quantity}}</p>
+          <div class="flex items-center">
+            <button class="text-slate-500 hover:text-slate-700 mr-2">
+              <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" class="w-5 h-5">
+                <path stroke-linecap="round" stroke-linejoin="round" d="M20 12H4" />
+              </svg>
+            </button>
+            <p class="text-sm text-slate-500">{{cartItem.quantity}}</p>
+            <button class="text-slate-500 hover:text-slate-700 ml-2">
+              <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" class="w-5 h-5">
+                <path stroke-linecap="round" stroke-linejoin="round" d="M12 4.5v15m7.5-7.5h-15" />
+              </svg>
+            </button>
+          </div>
         </td>
         <td class="p-4 border-b border-slate-200 py-5">
           <p class="text-sm text-slate-500">{{cartItem.product.price}}</p>
