--- a/src/app/pages/register/register.component.html
+++ b/src/app/pages/register/register.component.html
@@ -5,6 +5,10 @@
       <form (ngSubmit)="createUser()" #userForm="ngForm" class="bg-white p-10 rounded-lg shadow-lg min-w-full">
         <h1 class="text-center text-2xl mb-6 text-gray-600 font-bold font-sans">Formregister</h1>
         <div>
+          <label class="text-gray-800 font-semibold block my-3 text-md"  for="username">Phone</label>
+          <input class="w-full bg-gray-100 px-4 py-2 rounded-lg focus:outline-none" type="text" [(ngModel)]="newUser.phone" name="username" id="phone" placeholder="phone" />
+        </div>
+        <div>
           <label class="text-gray-800 font-semibold block my-3 text-md"  for="username">Username</label>
           <input class="w-full bg-gray-100 px-4 py-2 rounded-lg focus:outline-none" type="text" [(ngModel)]="newUser.username" name="username" id="username" placeholder="username" />
         </div>
@@ -14,11 +18,11 @@
         </div>
         <div>
           <label class="text-gray-800 font-semibold block my-3 text-md" for="password">Password</label>
-          <input class="w-full bg-gray-100 px-4 py-2 rounded-lg focus:outline-none" type="text" [(ngModel)]="newUser.password" name="password" id="password" placeholder="password" />
+          <input class="w-full bg-gray-100 px-4 py-2 rounded-lg focus:outline-none" type="password" [(ngModel)]="newUser.password" name="password" id="password" placeholder="password" />
         </div>
         <div>
           <label class="text-gray-800 font-semibold block my-3 text-md" for="confirm">Confirm password</label>
-          <input class="w-full bg-gray-100 px-4 py-2 rounded-lg focus:outline-none" type="text" name="confirm" id="confirm" placeholder="confirm password" />
+          <input class="w-full bg-gray-100 px-4 py-2 rounded-lg focus:outline-none" type="password" name="confirm" id="confirm" placeholder="confirm password" />
         </div>
         <button type="submit" class="w-full mt-6 bg-indigo-600 rounded-lg px-4 py-2 text-lg text-white tracking-wide font-semibold font-sans">Register</button>
         <button type="submit" class="w-full mt-6 mb-3 bg-indigo-100 rounded-lg px-4 py-2 text-lg text-gray-800 tracking-wide font-semibold font-sans">Login</button>
